--- a/site/Stylesheet.css
+++ b/site/Stylesheet.css
@@ -1,8 +1,9 @@
 body {font-family: arial, sans-serif;
 	background-color: #949494;
-	text-shadow: 2px 2px 2px #111111;
 }
 h1 {font-size: 72;
-color: blue;
+color: #ffffff;
+text-align: center;
+text-shadow: 2px 2px 2px #ffffff;
 background-image: url("http://66.media.tumblr.com/4ad3ae296bab1b3bace55450eeb2c636/tumblr_odyfjuuVsm1s7r0tjo1_1280.jpg");
 }
