--- a/site/Stylesheet.css
+++ b/site/Stylesheet.css
@@ -20,7 +20,7 @@ body {font-family: arial, sans-serif;
 	font-size: 1.5em;
 	text-transform: uppercase;
 	font-weight: bold;
-	text-shadow: 2px 2px 2px #222
+	text-shadow: 2px 2px 2px #222;
 	margin-top: 0;
 	margin-bottom: 0;
 	line-height: .75;
