--- a/site/Stylesheet.css
+++ b/site/Stylesheet.css
@@ -21,7 +21,7 @@ body {font-family: arial, sans-serif;
 	font-size: 1.5em;
 	text-transform: uppercase;
 	font-weight: bold;
-	text-shadow: 2px 2px 2px #222;
+	text-shadow: 1px 1px 1px #222;
 	margin-top: 0;
 	margin-bottom: 0;
 	line-height: .75;
@@ -34,4 +34,12 @@ color: #ffffff;
 text-align: center;
 text-shadow: 2px 2px 2px;
 background-image: url("http://66.media.tumblr.com/4ad3ae296bab1b3bace55450eeb2c636/tumblr_odyfjuuVsm1s7r0tjo1_1280.jpg");
+}
+#text {
+	box-sizing: border-box;
+	border: 1px;
+	padding: 2;
+	margin: 2;
+	overflow: auto;
+	float: left;
 }
