--- a/site/Stylesheet.css
+++ b/site/Stylesheet.css
@@ -35,10 +35,14 @@ text-align: center;
 text-shadow: 1px 1px 1px #111111;
 background-image: url("http://66.media.tumblr.com/4ad3ae296bab1b3bace55450eeb2c636/tumblr_odyfjuuVsm1s7r0tjo1_1280.jpg");
 }
+#cherry {
+	float: left;
+	margin-left: 20px;
+}
 #text {
 	border: 1px solid #111111;
 	width: 800px;
 	overflow: auto;
-	float: right;
+	padding: 20px;
 	margin-left: 20px;
 }
