--- a/site/Stylesheet.css
+++ b/site/Stylesheet.css
@@ -1,71 +1,85 @@
-body {font-family: arial, sans-serif;
-	background-color: #949494;
+body {
+  font-size: 16px;
+  color: #fff;
+  background-color: #61122f;
+  font-family: 'Oxygen', sans-serif;
 }
+
+/** HEADER **/
 #header-nav {
-	background-color: #6451a2;
-	border-radius: 0;
-	border: 0;
+  background-color: #f6b319;
+  border-radius: 0;
+  border: 0;
 }
+
 #logo-img {
-	background: url('https://67.media.tumblr.com/9d443daf21f206657f7aa68e46c88db1/tumblr_o8a0a6eeyg1tsx1g4o1_1280.jpg') no-repeat;
-	width: 50px;
-	height: 50px;
-	margin: 10px 15px 10px 0;
+  background: url('../images/restaurant-logo_large.png') no-repeat;
+  width: 150px;
+  height: 150px;
+  margin: 10px 15px 10px 0;
 }
+
 .navbar-brand {
-	padding-top: 25px;
+  padding-top: 25px;
 }
-.navbar-brand h1 {
-	font-family: arial, sans-serif;
-	color: #100f37;
-	font-size: 1.5em;
-	text-transform: uppercase;
-	font-weight: bold;
-	text-shadow: 1px 1px 1px #222;
-	margin-top: 0;
-	margin-bottom: 0;
-	line-height: .75;
+
+.navbar-brand h1 { /* Restaurant name */
+  font-family: 'Lora', serif;
+  color: #557c3e;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px #222;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: .75;
 }
 .navbar-brand a:hover, .navbar-brand a:focus {
-	text-decoration: none;
+  text-decoration: none;
 }
-h2 {font-size: 72;
-color: #ffffff;
-text-align: center;
-text-shadow: 1px 1px 1px #111111;
-background-image: url("http://66.media.tumblr.com/4ad3ae296bab1b3bace55450eeb2c636/tumblr_odyfjuuVsm1s7r0tjo1_1280.jpg");
+.navbar-brand p { /* Kosher cert */
+  color: #000;
+  text-transform: uppercase;
+  font-size: .7em;
+  margin-top: 15px;
 }
+.navbar-brand p span { /* Star-K */
+  vertical-align: middle;
+}
+
 #nav-list {
-	margin-top: 10px;
+  margin-top: 10px;
 }
 #nav-list a {
-	color: #100f37;
-	text-align: center;
+  color: #951C49;
+  text-align: center;
 }
 #nav-list a:hover {
-	background: #e6e6e6;
+  background: #E7E7E7;
 }
 #nav-list a span {
-	font-size: 1.8em;
+  font-size: 1.8em;
 }
+
 #phone {
-	margin-top: 5px;
+  margin-top: 5px;
 }
-#phone a { /*Phone number */
-	text-align: right;
-	padding-bottom: 0;
+#phone a { /* Phone number */
+  text-align: right;
+  padding-bottom: 0;
 }
-#phone div { /*we deliver */
-	color: #111111;
-	text-align: right;
-	padding-right: 15px;
+#phone div { /* We Deliver */
+  color: #557c3e;
+  text-align: right;
+  padding-right: 15px;
 }
+
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-	border: 1px solid #100f37;
+  border: 1px solid #61122f;
 }
 .navbar-header button.navbar-toggle {
-	clear: both;
-	margin-top: -30px;
+  clear: both;
+  margin-top: -30px;
 }
 @media (min-width: 1200px) { 
  }
