--- a/site/Stylesheet.css
+++ b/site/Stylesheet.css
@@ -84,7 +84,7 @@ background-image: url("http://66.media.tumblr.com/4ad3ae296bab1b3bace55450eeb2c6
  	width: 250px;
  	margin-bottom: 15px;
  	position: relative;
- 	border: 2px solid #FF0C1F;
+ 	border: 2px solid #FF0033;
  	overflow: hidden;
  }
  #menu-tile:hover, #specials-tile:hover, #map-tile:hover {
