--- a/site/Stylesheet.css
+++ b/site/Stylesheet.css
@@ -67,6 +67,36 @@ background-image: url("http://66.media.tumblr.com/4ad3ae296bab1b3bace55450eeb2c6
 	clear: both;
 	margin-top: -30px;
 }
+/* END HEADER */
+/* FOOTER */
+.panel-footer {
+	margin-top: 30px;
+	padding-top: 35px;
+	padding-bottom: 30px;
+	background-color: #222;
+	border-top: 0;
+}
+.panel-footer div.row {
+	margin-bottom: 35px;
+}
+#hours, #address {
+	line-height: 2;
+}
+#hours > span, #address > span {
+	font-size: 1.3em;
+}
+#address p {
+	color: #557c3e;
+	font-size: .8em;
+	line-height: 1.8;
+}
+#testimonials {
+	font-style: italic;
+}
+#testismonials p:nth-child(2) {
+	margin-top: 25px;
+}
+/* END FOOTER */
 @media (min-width: 1200px) { 
  }
  @media (min-width: 992px) and (max-width: 1199px){
