--- a/site/Stylesheet.css
+++ b/site/Stylesheet.css
@@ -106,6 +106,20 @@ background-image: url("http://66.media.tumblr.com/4ad3ae296bab1b3bace55450eeb2c6
 
  }
  @media (max-width: 767px){
+ 	/* Footer */
+ 	.panel-footer section {
+ 		margin-bottom: 30px;
+ 		text-align: center;
+ 	}
+ 	.panel-footer section:nth-child(3) {
+ 		margin-bottom: 0; /* margin already exists on whole row */
+ 	}
+ 	.panel-footer section hr {
+ 		width: 50%;
+ 	}
+ 	/* End Footer */
+
+ 	/* Home Page */
  	.container .jumbotron {
  		margin-top: 30px;
  		padding: 0;
